# smart-farm-prediction

./: .angulardoc.json  .eslintrc.json  .gitignore  README.md  angular.json  app.py  calc.py  config.py  dbconn.py  logging_setup.py  main.py  migrations.json  model_option.py  normalize.py  nx.json  package-lock.json  package.json  plot.py  pyproject.toml  tailwind.config.js  tsconfig.base.json
ai_models/train_options/: growth-simple-1.json  internal-poc-1.json  pest-basic-1.json
apps/ai/: jest.config.ts  project.json  tsconfig.app.json
apps/ai_train/: main.py
apps/api/: project.json  tsconfig.app.json
apps/edge-mon/: .eslintrc.json  jest.config.js  jest.config.ts  project.json
apps/edge-mon-e2e/: cypress.json  project.json
apps/farm/: jest.config.js  jest.config.ts  project.json
apps/ml/: main.py  router.py  serve_model.py  test_hello.py
apps/ml_center/: main.py  router.py  train.py
apps/ml_common/: __init__.py  base_model.py  config.py  dbconn.py  logger.py  redis_message.py  singleton_instance.py
apps/sensor/: jest.config.ts
apps/sensor-collector/: jest.config.js
apps/sensor-processor/: jest.config.ts  project.json  tsconfig.app.json
dataset/pest/: ep_berry.csv  ep_leaf.csv  ep_leaf_proc.csv  ep_note.csv  (+4 more)
espd/: 1.train.py  2.demo.py  2.ids.py  3.convert.py  3.test.py  requirements.txt
models/: __init__.py  base_model.py  external_basic.py  growth_basic.py  growth_simple.py  internal_poc.py  internal_self.py  model_factory.py  pest_basic.py
temp/: internal-poc-1_aihub.feather  internal-poc-1_wfs.feather
tools/: scp.sh  tar_binaries.sh
(+225 files in other folders)
