[tool.poetry]
name = "etri start-farm predict"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.17.0"
tensorflowjs = "^4.20.0"
pymysql = "^1.1.1"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
openpyxl = "^3.1.5"
polars = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
